docker file update