@@ -1,4 +1,5 @@
 FROM jenkins/jenkins:2.192
+
 USER root
 
 RUN apt-get update && apt-get install -y curl
@@ -8,3 +9,5 @@ RUN apt-get update
 RUN apt-get install nano
 
 RUN wget -O dd-java-agent.jar 'https://repository.sonatype.org/service/local/artifact/maven/redirect?r=central-proxy&g=com.datadoghq&a=dd-java-agent&v=LATEST'
+
+ENV JAVA_OPTS="-javaagent:./dd-java-agent.jar -Djenkins.install.runSetupWizard=false -Xmx3072m -XX:MaxPermSize=512m"
